# punycode

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  config.status  configure  configure.in  punycode.Rproj
R/: RcppExports.R  punycode-package.R  punycode.R
autom4te.cache/: output.0  requests  traces.0
inst/doc/: introduction_to_punycode.R  introduction_to_punycode.Rmd  introduction_to_punycode.html
man/: is_idna.Rd  is_punycode.Rd  puny_decode.Rd  puny_encode.Rd  puny_tld_check.Rd  punycode.Rd
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.R  RcppExports.cpp  r_puny.cpp
src/libidn/i386/lib/: libcharset.la  libiconv.la  libidn.la
src/libidn/i386/lib/pkgconfig/: libidn.pc
src/libidn/x64/lib/: libcharset.la  libiconv.la  libidn.la
src/libidn/x64/lib/pkgconfig/: libidn.pc
tests/: test-all.R
tests/testthat/: test-punycode.R
tools/: winlibs.R
vignettes/: introduction_to_punycode.R  introduction_to_punycode.Rmd  introduction_to_punycode.html
